# doc-embarque

./: .gitignore  README.md  doc-embarque.drawio
doc-embarque/backend/: CMakeLists.txt  README.md  main.c
doc-embarque/backend/data/: boarding.csv  boarding.txt  class.txt  schools.txt  students.txt  travel_insurance.csv  travel_insurance.txt  users.txt
doc-embarque/backend/include/: utils.h
doc-embarque/backend/include/models/: boarding.h  class.h  contact.h  installment.h  paths.h  payment.h  school.h  student.h  travel.h  travel_insurance.h  user.h
doc-embarque/backend/include/services/: school_service.h  user_service.h
doc-embarque/backend/include/use_cases/: boarding_spreadsheet.h  check_student_payment.h  count_students.h  create_boarding.h  create_class.h  create_contact.h  create_installment.h  create_payment.h  create_school.h  create_student.h  create_travel.h  create_travel_insurance.h  create_user.h  delete_boarding.h  delete_class.h  delete_contact.h  delete_installment.h  delete_payment.h  delete_school.h  delete_student.h  delete_travel_insurance.h  delete_user.h  get_school.h  get_student.h  get_user.h  login.h  read_boarding.h  read_class.h  read_contact.h  read_installment.h  read_payment.h  read_school.h  read_student.h  read_travel.h  read_travel_insurance.h  read_user.h  travelinsurance_spreadsheet.h  update_boarding.h  update_class.h  update_contact.h  (+6 more)
doc-embarque/backend/src/: utils.c
doc-embarque/backend/src/services/: school_service.c  user_service.c
doc-embarque/backend/src/use_cases/: boarding_spreadsheet.c  check_student_payment.c  count_students.c  create_boarding.c  create_class.c  create_contact.c  create_installment.c  create_payment.c  create_school.c  create_student.c  create_travel.c  create_travel_insurance.c  create_user.c  delete_boarding.c  delete_class.c  delete_contact.c  delete_installment.c  delete_payment.c  delete_school.c  delete_student.c  delete_travel_insurance.c  delete_user.c  get_school.c  get_student.c  get_user.c  login.c  read_boarding.c  read_class.c  read_contact.c  read_installment.c  read_payment.c  read_school.c  read_student.c  read_travel.c  read_travel_insurance.c  read_user.c  travelinsurance_spreadsheet.c  update_boarding.c  update_class.c  update_contact.c  (+6 more)
doc-embarque/frontend/: CMakeLists.txt  README.md  style.css
doc-embarque/frontend/data/: class.txt  installments.txt  payments.txt  schools.txt  students.txt  travels.txt  users.txt
doc-embarque/frontend/include/: boarding_page.h  classes_page.h  dashboard_page.h  home_window.h  login_window.h  payments_page.h  register_dialog.h  register_window.h  schools_page.h  session.h  travels_page.h
doc-embarque/frontend/src/: boarding_page.c  classes_page.c  dashboard_page.c  home_window.c  login_window.c  main.c  payments_page.c  register_dialog.c  register_window.c  schools_page.c  session.c  travels_page.c
